--- a/src/components/shared/footer.scss
+++ b/src/components/shared/footer.scss
@@ -10,8 +10,11 @@
     justify-content: center;
     align-items: flex-start;
     padding: 8rem 12vw 10rem 12vw;
+    color:white;
 }
-
+.Footer_logoandc p {
+    margin-top: 5px;
+}
 .Footer__links {
     margin: 0;
     flex: 1;
@@ -20,10 +23,17 @@
     justify-content: center;
     align-items: flex-end;
 }
+.Footer__links p {
+    width: 100%;
+    max-width: 320px;
+    text-decoration: none;
+    text-align: right;
+    color: $notwhitetxt;
+}
 
 .Footer__links a {
     color: white;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 /* QUERIES */
@@ -38,11 +48,14 @@
         align-items: flex-start;
     }
     .Footer__links {
-        margin-top: 2rem;
+        margin-top: 1rem;
         flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+    }
+    .Footer__links p {
+        text-align: left;
     }
 }
